--- a/package.json
+++ b/package.json
@@ -1,12 +1,28 @@
 {
-    "scripts": {
-        "dev": "next",
-        "build": "next build",
-        "start": "next start"
-    },
-    "dependencies": {
-        "next": "^9.2.1",
-        "react": "^16.12.0",
-        "react-dom": "^16.12.0"
-    }
+  "name": "with-jest-typescript",
+  "version": "1.0.0",
+  "scripts": {
+    "test": "jest",
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "next": "^9.2.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^24.0.23",
+    "@types/react": "^16.8.8",
+    "@types/react-dom": "^16.8.2",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^24.9.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
+    "jest": "^24.9.0",
+    "react-addons-test-utils": "^15.6.2",
+    "react-test-renderer": "^16.8.4",
+    "typescript": "^3.3.3333"
+  }
 }
